--- a/src/Styles/App.module.css
+++ b/src/Styles/App.module.css
@@ -1,16 +1,21 @@
 #root, body {
+    font-family: 'Consolas', 'Courier', 'verdana', 'sans-serif';
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     margin: 0 0 0 0;
+    left: 0;
+    top: 0;
   }
 
-  h1, h2, h3, h4, p, span{
-    color: #6A7367 ;
+  h1, h2, h3, h4, p, span {
     margin: 0 0 0 0;
-    font-family: 'Consolas', 'Courier', 'verdana', 'sans-serif';
+    color: #FFFFFF;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    color: #3399FF;
   }
   
   .App {
@@ -24,11 +29,10 @@
   .AppHeader {
     display: block;
     align-self: flex-start;
-    align-items: center;
     width: 100%;
     height: 50px;
-    box-shadow: 0px 1px 2px #6A7367;
-    position: sticky;
+    box-shadow: 0px 1px 3px #6A7367;
+    position: relative;
     top: 0px;
   }
   
@@ -41,11 +45,10 @@
   }
   
   .AppFooter{
-    display: flex;
-    align-self: flex-end;
+    display: block;
+    position: absolute;
     width: 100%;
     height: 50px;
     box-shadow: 1px 0px 0px 1px gray;
-    position: absolute;
     bottom: 0;
   }
