--- a/src/Styles/App.module.css
+++ b/src/Styles/App.module.css
@@ -23,32 +23,34 @@
     min-height: 100%;
     min-width: 100%;
     position: fixed;
-    background-color: #1E1E1E;
+    background-color: #1E1E1E
+    /* 
+      #1E1E1E; 
+      #6A7367
+    */
   }
 
   .AppHeader {
     display: block;
-    align-self: flex-start;
-    width: 100%;
-    height: 50px;
-    box-shadow: 0px 1px 3px #6A7367;
     position: relative;
-    top: 0px;
+    box-shadow: 0px 1px 3px #6A7367;
+    height: 50px;
   }
   
   .AppContainer{
-    display: block;
+    display: flex;
     position: absolute;
-    justify-self: stretch;
     min-width: 100%;
-    min-height: 100%;
+    min-height: 88%;
+    background-color: black;
+    margin-top: 3px;
   }
   
   .AppFooter{
-    display: block;
+    display: flex;
     position: absolute;
     width: 100%;
-    height: 50px;
+    height: 5%;
     box-shadow: 1px 0px 0px 1px gray;
     bottom: 0;
   }
