--- a/src/Styles/App.module.css
+++ b/src/Styles/App.module.css
@@ -45,8 +45,13 @@
   .AppFooter{
     display: flex;
     position: absolute;
+    justify-content: center;
     width: 100%;
     height: 5%;
     box-shadow: 1px 0px 0px 1px gray;
     bottom: 0;
+  }
+
+  .AppFooter p {
+    margin-top: 5px;
   }
