:sparkles: adding util component and working on Project page, :construction_worker:higlight component and screen position [wip].

--- a/src/Styles/Pages.module.css
+++ b/src/Styles/Pages.module.css
@@ -29,3 +29,9 @@
     width: 30%;
     height: 30%;
 }
+
+.RowOfObjects {
+    display: inline;
+    align-items: center;
+    justify-items: left;
+}
